# patient-sim

./: .env.example  .gitignore  LICENSE  README.md  posthog-self-driving-report.md  posthog-setup-report.md  pyproject.toml
.claude/skills/integration-fastapi/: SKILL.md
docs/: architecture.md  deployment.md  persona_authoring.md
personas/: anxious_newly_diagnosed_diabetic.yaml  cooperative_young_professional_hypertensive.yaml  first_visit_new_diagnosis.yaml  young_professional_hypertension_followup.yaml
personas/knowledge/: communication_style.md  communication_style_2.md  condition_summary.md  condition_summary_2.md  emotional_triggers.md  emotional_triggers_2.md  persona_background.md  persona_background_2.md
src/patient_sim/: db.py  retriever_factory.py  state_store.py
src/patient_sim/api/: __init__.py  main.py
src/patient_sim/cli/: main.py
src/patient_sim/config/: __init__.py  settings.py
src/patient_sim/evaluation/: foundry_evaluator.py  judge.py  report.py  report_generator.py  rubric.py
src/patient_sim/graph/: graph.py  nodes.py  parser.py  prompts.py  state.py
src/patient_sim/logging/: langsmith_hook.py  replay.py  structured_logger.py
tests/: test_db_postgres.py  test_foundry.py  test_foundry_e2e.py  test_foundry_embeddings.py  test_foundry_evaluation.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5_cli.py  test_phase6.py
web/: package-lock.json  package.json
web/components/: Layout.tsx
web/lib/: api.ts
web/pages/: index.tsx  simulate.tsx
web/styles/: globals.css
(+11 files in other folders)
